# autonomous_mobile_robots

./: .gitignore  README.md  run.sh  run1.sh
Homeworks/HW1/: AMR_HW1_Walid_Shaker.docx  hw01.py
Homeworks/HW2/: AMR_HW2_Walid_Shaker.docx  hw02.py
Homeworks/HW3/: AMR_HW3_Walid_Shaker.docx  hw03.py
Homeworks/HW4/: AMR_HW4_Walid_Shaker.docx  hw03.py  hw04.py
Quizes/: AB_parking.py  Quiz04.txt  quiz_02.py  quiz_02_1.py  quiz_02_Ivan.py  quiz_03.py  quiz_04.py
hagen/: .gitattributes  README.md
hagen/hagen_gazebo/: CMakeLists.txt  package.xml
hagen/hagen_gazebo/config/: ekf.yaml  ekf_urdf.yaml
hagen/hagen_gazebo/env-hooks/: hagen_gazebo.sh.in
hagen/hagen_gazebo1/: CMakeLists.txt  package.xml
hagen/hagen_gazebo1/env-hooks/: hagen_gazebo1.sh.in
hagen/hagen_gazebo1/launch/: hagen.launch.py
hagen/hagen_gazebo1/models/hagen/: model.config
hagen/hagen_gazebo1/models/hagen/materials/scripts/: script.material
hagen/hagen_gazebo1/rviz/: hagen_gazebo1.rviz
hagen/hagen_gazebo1/worlds/: hagen_city.world
hagen_control/: package.xml  setup.cfg  setup.py
hagen_control/hagen_control/: .gitignore  diff_drive_LQR.py  diff_drive_MPC.py  diff_drive_PD_control.py  diff_drive_PID_control.py  dubins_path.py  hagen_control_strategy.py  hagen_control_strategy_walid.py  odom.py
hagen_control/hagen_localization/: prob_dis.py
hagen_localization/: bayesian_filter.py  ekf_localization.py  ekf_localization_all_the_landmarks.py  mci.py  pf_localization_.py  velocity_motion_model.py
hagen_mapping/: ray_casting.py  winding_number_algorithm.py
(+11 files in other folders)
